# tizen-tool

./: .buildignore  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  app.js  build.sh  config.xml  dockerize-tizen-studio.sh  index.html  install-tizen-studio.sh  install.sh  pyproject.toml  styles.css
.github/: dependabot.yml
.github/workflows/: ci.yml
src/tizen_tool/: __init__.py  bundled_resources.py  cli.py  docker_ops.py  errors.py  installer_cache.py  paths.py  project_files.py  runtime.py  settings.py
src/tizen_tool/resources/: Dockerfile  install_tizen_studio.py
