[project]
name = "tizen-tool"
version = "0.1.0"
description = "tizen-tool is a small CLI for building, re-signing, and installing Tizen web packages through a Dockerized Tizen Studio environment"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ruslan Khasanshin" }]
maintainers = [{ name = "Ruslan Khasanshin" }]

keywords = [
  "tizen",
  "tizen-studio",
  "tizen-tv",
  "samsung-tv",
  "cli",
  "docker",
  "wgt",
  "web-app",
  "packaging",
  "signing",
  "deployment",
  "developer-tools",
  "automation",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]

dependencies = [
  "defusedxml==0.7.1",
  "pathspec==1.0.4",
  "pydantic-settings==2.13.1",
  "typer==0.24.1",
]

[project.scripts]
tizen-tool = "tizen_tool.cli:main"

[project.urls]
Homepage = "https://github.com/hu553in/tizen-tool"
Repository = "https://github.com/hu553in/tizen-tool"
Issues = "https://github.com/hu553in/tizen-tool/issues"
Changelog = "https://github.com/hu553in/tizen-tool/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tizen_tool"]

[tool.hatch.build.targets.sdist]
include = ["/src/tizen_tool", "/README.md", "/LICENSE", "/pyproject.toml"]

[dependency-groups]
dev = [
  "bandit==1.9.4",
  "prek==0.3.6",
  "pysentry-rs==0.4.3",
  "ruff==0.15.7",
  "ty==0.0.24",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG", "PL", "RUF"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.pysentry.defaults]
sources = "pypa,pypi,osv"
fail_on = "low"
