[project]
name = "tizen-tool"
version = "0.2.2"
description = "tizen-tool is a small CLI for building, re-signing, and installing Tizen web packages through a Dockerized Tizen Studio environment."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ruslan Khasanshin" }]
maintainers = [{ name = "Ruslan Khasanshin" }]

keywords = [
  "tizen",
  "tizen-studio",
  "tizen-tv",
  "samsung-tv",
  "cli",
  "docker",
  "wgt",
  "web-app",
  "packaging",
  "signing",
  "deployment",
  "developer-tools",
  "automation",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]

dependencies = [
  "defusedxml>=0.7.1",
  "ifaddr>=0.2.0",
  "pathspec>=1.0.4",
  "pydantic-settings>=2.13.1",
  "typer>=0.23.0,<0.24.0",
]

[project.scripts]
tizen-tool = "tizen_tool.cli:main"

[project.urls]
Homepage = "https://github.com/hu553in/tizen-tool"
Repository = "https://github.com/hu553in/tizen-tool"
Issues = "https://github.com/hu553in/tizen-tool/issues"
Changelog = "https://github.com/hu553in/tizen-tool/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tizen_tool"]

[tool.hatch.build.targets.sdist]
include = ["/src/tizen_tool", "/README.md", "/LICENSE", "/pyproject.toml"]

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "prek>=0.3.8",
  "python-semantic-release>=10.4.1",
  "pysentry-rs>=0.4.3",
  "ruff>=0.15.9",
  "ty>=0.0.28",
]

[tool.semantic_release]
allow_zero_version = true
build_command = "uv build"
commit_message = "chore(release): v{version}"
commit_parser = "conventional"
logging_use_named_masks = true
major_on_zero = false
tag_format = "v{version}"
upload_to_vcs_release = false
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "^chore\\(release\\): v\\d+\\.\\d+\\.\\d+$",
  "^Merge ",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG", "PL", "RUF"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.pysentry.defaults]
fail_on = "low"

[tool.pysentry.sources]
enabled = ["pypa", "pypi", "osv"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]
